[gd_scene load_steps=2 format=3 uid="uid://csg2ofayaqsm2"]

[ext_resource type="Script" path="res://addons/SceneTool/importer.gd" id="1_6cxm6"]

[node name="importer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6cxm6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ImportScene" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Import current scene"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 4

[node name="NameLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Root node name:"

[node name="Name" type="LineEdit" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
editable = false
expand_to_text_length = true
caret_blink = true
caret_blink_interval = 0.5

[node name="PathLabel" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Scene path:"

[node name="Path" type="LineEdit" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
editable = false
expand_to_text_length = true
caret_blink = true
caret_blink_interval = 0.5

[node name="SceneSize" type="Label" parent="VBoxContainer/GridContainer"]
layout_mode = 2
text = "Scene size:"

[node name="Size" type="LineEdit" parent="VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
editable = false
expand_to_text_length = true
caret_blink = true
caret_blink_interval = 0.5

[node name="Settings" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Settings"]
layout_mode = 2
text = "Show all nodes:"

[node name="ShowAllNodes" type="CheckButton" parent="VBoxContainer/Settings"]
layout_mode = 2
focus_mode = 0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LabelNodes" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="NodesGrid" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 3

[node name="Label" type="Label" parent="VBoxContainer/NodesGrid"]
layout_mode = 2
text = "Mesh name"

[node name="Label2" type="Label" parent="VBoxContainer/NodesGrid"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/NodesGrid"]
layout_mode = 2

[node name="RequestButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "HTTP REQUEST"

[node name="ButtonTest" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "ASDF"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="VBoxContainer/ButtonTest" to="." method="_on_button_test_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_request_completed"]
